--- a/index.fbo.html
+++ b/index.fbo.html
@@ -94,7 +94,6 @@ void main() {
 }
 		</script>
 		<script id='Black_Hole:reset:pos:fsh' type='x-shader/x-fragment'>
-#extension GL_OES_texture_float : enable
 varying vec3 vtxv;
 uniform float objectDist;
 void main() {
@@ -105,7 +104,6 @@ void main() {
 }
 		</script>
 		<script id='Alcubierre_Warp_Drive_Bubble:reset:pos:fsh' type='x-shader/x-fragment'>
-#extension GL_OES_texture_float : enable
 varying vec3 vtxv;
 void main() {
 	vec3 dir = normalize(vtxv);
@@ -162,7 +160,6 @@ void main() {
 }
 		</script>
 		<script id='Black_Hole:Alcubierre_Warp_Drive_Bubble:iterate:pos:vel:vsh' type='x-shader/x-vertex'>
-#extension GL_OES_texture_float : enable
 attribute vec2 vertex;
 varying vec2 uv;
 varying vec3 vtxv;
@@ -224,28 +221,28 @@ void main() {
 	float dfScalar = sechDiff / (2. * rs * tanhSigmaCenter);
 	vec4 fv;
 	fv.xyz = warpBubbleThickness * pos.xyz * dfScalar;
-	fv.t = -warpBubbleVelocity * warpBubbleThickness * pos.x * dfScalar;
-	gl_FragColor.x = vel.x - deltaLambda * ((f * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity - f * fv.x * warpBubbleVelocity * warpBubbleVelocity - fv.t * warpBubbleVelocity) * vel.t * vel.t
-		- 2. * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.x
-		- 2. * (f * f * fv.y * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.y * warpBubbleVelocity) / 2. * vel.t * vel.y
-		- 2. * (f * f * fv.z * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.z * warpBubbleVelocity) / 2. * vel.t * vel.z
+	fv.w = -warpBubbleVelocity * warpBubbleThickness * pos.x * dfScalar;
+	gl_FragColor.w = vel.w - deltaLambda * (f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.w * vel.w
+		- 2. * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * vel.w * vel.x
+		- 2. * f * fv.y * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.w * vel.y
+		- 2. * f * fv.z * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.w * vel.z
+		+ fv.x * warpBubbleVelocity * vel.x * vel.x
+		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.x * vel.y
+		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.x * vel.z
+	);
+	gl_FragColor.x = vel.x - deltaLambda * ((f * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity - f * fv.x * warpBubbleVelocity * warpBubbleVelocity - fv.w * warpBubbleVelocity) * vel.w * vel.w
+		- 2. * f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.w * vel.x
+		- 2. * (f * f * fv.y * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.y * warpBubbleVelocity) / 2. * vel.w * vel.y
+		- 2. * (f * f * fv.z * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity + fv.z * warpBubbleVelocity) / 2. * vel.w * vel.z
 		+ f * fv.x * warpBubbleVelocity * warpBubbleVelocity * vel.x * vel.x
 		+ 2. * f * fv.y * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.x * vel.y
 		+ 2. * f * fv.z * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.x * vel.z
 	);
-	gl_FragColor.y = vel.y + deltaLambda * (f * fv.y * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
-		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.t * vel.x
+	gl_FragColor.y = vel.y + deltaLambda * (f * fv.y * warpBubbleVelocity * warpBubbleVelocity * vel.w * vel.w
+		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.w * vel.x
 	);
-	gl_FragColor.z = vel.z + deltaLambda * (f * fv.z * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
-		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.t * vel.x
-	);
-	gl_FragColor.w = vel.t - deltaLambda * (f * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.t
-		- 2. * f * fv.x * warpBubbleVelocity * warpBubbleVelocity * vel.t * vel.x
-		- 2. * f * fv.y * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.t * vel.y
-		- 2. * f * fv.z * warpBubbleVelocity * warpBubbleVelocity / 2. * vel.t * vel.z
-		+ fv.x * warpBubbleVelocity * vel.x * vel.x
-		+ 2. * fv.y * warpBubbleVelocity / 2. * vel.x * vel.y
-		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.x * vel.z
+	gl_FragColor.z = vel.z + deltaLambda * (f * fv.z * warpBubbleVelocity * warpBubbleVelocity * vel.w * vel.w
+		+ 2. * fv.z * warpBubbleVelocity / 2. * vel.w * vel.x
 	);
 }
 		</script>
