--- a/index.fbo.cube.html
+++ b/index.fbo.cube.html
@@ -9,7 +9,7 @@
 
 		<script type='text/javascript' src='/js/jquery-1.10.0.min.js'></script>
 		<script type='text/javascript' src='/js/util.js'></script>
-		<script type='text/javascript' src='/js/gl-matrix-min.js'></script>
+		<script type='text/javascript' src='/js/gl-matrix.2.2.0.min.js'></script>
 		<script type='text/javascript' src='/js/webgl-debug.js'></script>
 		<script type='text/javascript' src='/js/gl-util.js'></script>
 		<script type='text/javascript' src='/js/gl-util-pingpong.js'></script>
