--- a/index.fbo.html
+++ b/index.fbo.html
@@ -9,7 +9,7 @@
 
 		<script type='text/javascript' src='/js/jquery-1.10.0.min.js'></script>
 		<script type='text/javascript' src='/js/util.js'></script>
-		<script type='text/javascript' src='/js/gl-matrix-min.js'></script>
+		<script type='text/javascript' src='/js/gl-matrix.2.2.0.min.js'></script>	<!-- something special about 2.2.0 that makes the whole cube flip ... -->
 		<script type='text/javascript' src='/js/webgl-debug.js'></script>
 		<script type='text/javascript' src='/js/gl-util.js'></script>
 		<script type='text/javascript' src='/js/gl-util-unitquad.js'></script>
@@ -58,7 +58,7 @@ vec3 qtransform( vec4 q, vec3 v ){
 void main() {
 	uv = vertex;
 	vec3 vtx3 = vec3(vertex * 2. - 1., 1.);
-	vtx3 = qtransform(vec4(angle.xyz, -angle.w), vtx3);
+	vtx3 = qtransform(angle, vtx3);
 	vtx3 = viewMatrix * vtx3;
 	vec4 vtx4 = vec4(vtx3, 1.);
 	gl_Position = projMat * vtx4;
@@ -74,7 +74,7 @@ const mat3 viewMatrixInv = mat3(
 	0., 0., -1.,
 	-1., 0., 0.);
 vec3 qtransform( vec4 q, vec3 v ){ 
-	return v + 2.0*cross(cross(v, q.xyz ) + q.w*v, q.xyz);
+	return v + 2.0*cross(cross(v, q.xyz) + q.w*v, q.xyz);
 }
 void main() {
 	vec3 dir = texture2D(lightVelTex, uv).xyz;
