fixed the MathJax stuff

--- a/testcube.html
+++ b/testcube.html
@@ -84,7 +84,7 @@ a:active {
 	</head>
 	<body style='margin:0px; overflow:hidden'>
 		<div id='panel' style='width:400; position:absolute; background-color:rgba(0,0,0,.5)'>
-			<input type='radio' group='1' checked>Test Cube</input><br>
+			<input type='radio' group='1' checked>Original Background</input><br>
 			<input type='radio' group='1' onclick='location.href="index.html"'>Software update</input><br>
 			<input type='radio' group='1' onclick='location.href="index.fbo.html"'>FBO update</input><br>
 		</div>
