--- a/index.fbo.html
+++ b/index.fbo.html
@@ -9,12 +9,12 @@
 
 		<script type='text/javascript' src='/js/jquery-1.10.0.min.js'></script>
 		<script type='text/javascript' src='/js/util.js'></script>
-		<script type='text/javascript' src='/js/gl-matrix.2.2.0.min.js'></script>	<!-- something special about 2.2.0 that makes the whole cube flip ... -->
-		<script type='text/javascript' src='/js/webgl-debug.js'></script>
+		<script type='text/javascript' src='/js/gl-matrix.2.2.0.min.js'></script>
 		<script type='text/javascript' src='/js/gl-util.js'></script>
 		<script type='text/javascript' src='/js/gl-util-unitquad.js'></script>
 		<script type='text/javascript' src='/js/gl-util-kernel.js'></script>
 		<script type='text/javascript' src='/js/mouse3d.js'></script>
+		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 		<script type='text/javascript' src='main.fbo.js'></script>
 		
 <script type='text/javascript'>
@@ -283,12 +283,25 @@ a:active {
 				Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 				Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
 			</div>		
-			<input type='radio' group='1' onclick='location.href="testcube.html"'>Test Cube</input><br>
+			<input type='radio' group='1' onclick='location.href="testcube.html"'>Original Background</input><br>
 			<input type='radio' group='1' onclick='location.href="index.html"'>Software update</input><br>
 			<input type='radio' group='1' checked>FBO update</input><br>
 			<button id='reset'>Reset</button><br>
 			<!-- button id='pause'>Pause</button><br -->
 			<!-- Update: <progress id='update-progress' max='100' value='0'></progress><br> -->
+			
+			<br>
+			<h3>Light and Geodesics</h3>
+			Light travels in a straight line.  Turns out the spacetime that light travels through is curved.
+			So how does one find the path that light travels through spacetime?  Enter geodesics.
+			Geodesics calculate the path that a straight line takes over an arbitrarily curved surface.<br>
+			<br>
+			The general equation is described as:
+			\( {\dot x}^\mu = {\Gamma^\mu}_{\alpha \beta} {\ddot x}^\alpha {\ddot x}^\beta \)
+			where \(x^\mu\) is our light particle coordinates in spacetime, and \( {\Gamma^\mu}_{\alpha \beta} \) is our Christoffel Symbol of the Second Kind.
+			This gives us a relation between the acceleration and the velocity of our test particle travelling across the geodesic.
+			It turns out the coefficients of the relation stored in \( \Gamma^\mu_{\alpha \beta} \) tend to be based on the particle position as well.
+			In the end we get a formula for computing the acceleration based on the position and velocity of the particle.	
 		</div>
 		<div id='webglfail' style='display:none'>
 			Sorry, your browser does not support WebGL<br>
