--- a/testcube.html
+++ b/testcube.html
@@ -86,7 +86,7 @@ a:active {
 		<div id='panel' style='width:400; position:absolute; background-color:rgba(0,0,0,.5)'>
 			<input type='radio' group='1' checked>Original Background</input><br>
 			<input type='radio' group='1' onclick='location.href="index.html"'>Software update</input><br>
-			<input type='radio' group='1' onclick='location.href="index.fbo.html"'>FBO update</input><br>
+			<input type='radio' group='1' onclick='location.href="index.html?renderer=GeodesicFBORenderer"'>FBO update</input><br>
 		</div>
 		<div id='webglfail' style='display:none'>
 			Sorry, your browser does not support WebGL<br>
