added Kerr metric

--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@ _gaq.push(['_trackPageview']);
 = \left[ \matrix{ {\dot x}^\mu \\ -{\Gamma^\mu}_{\alpha \beta} {\dot x}^\alpha {\dot x}^\beta } \right]
 \).
 			<h3>Schwarzschild Geodesic</h3>
-			The Schwarzschild metric describes the curvature of spacetime around a spherically separate object.
+			The Schwarzschild metric describes the curvature of spacetime around a spherical object.
 			The metric is given as \( {ds}^2 = -(1 - {2 M \over r}) {dt}^2 + (1 - {2 M \over r})^{-1} ({dx}^2 + {dy}^2 + {dz}^2) \)
 			for M the mass of the object.<br>
+			<h3>Kerr Geodesic</h3>
+			The Kerr metric describes the curvature of spacetime around a spherical rotating object.
+			The metric is given as \( {ds}^2 = -{dt}^2 + {dx}^2 + {dy}^2 + {dz}^2 + {2mr^3 \over {r^4 + a^2 z^2}} (dt + {{rx+ay}\over{a^2+r^2}} dx + {{ry-ax}\over{a^2+r^2}} dy + {z \over r} dz)^2 \)
+			for the mass \(m\), angular acceleration \(a\), and \(r\) is defined by \( x^2 + y^2 + z^2 = r^2 + a^2 (1 - {z^2 \over r^2}) \).<br>
 			<h3>Alcubierre Warp Bubble Geodesic</h3>
 			The Alcubierre warp bubble metric describes the curvature of spacetime around a warp bubble.
 			The metric is given as \( {ds}^2 = ({v_s}^2 f(r_s(t))^2 - 1) {dt}^2 - 2 v_s f(r_s) {dx} {dt} + {dx}^2 + {dy}^2 + {dz}^2 \)
