--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@ _gaq.push(['_trackPageview']);
 			<!-- Update: <progress id='update-progress' max='100' value='0'></progress><br> -->
 		</div>
 			
-		<div id='info' style='display:none; overflow:scroll; width:100%; height:90%; top:32px; z-index:2; position:absolute; background-color:rgba(255,255,255,.85); color:black; padding:10px'>
+		<div id='info' style='display:none; overflow:scroll; top:32px; z-index:2; position:absolute; background-color:rgba(255,255,255,.85); color:black; padding:10px'>
 			<h3>Photons</h3>
 			Light travels in a straight line.  Let's represent the position of a particle of light as \(x^\mu\), for \(\mu\) running over indexes 0, 1, 2, 3.
-			\(x^0 = t\) will represent the time of the particle. \(x^i\), for i running 1 through 3, will represent the coordinate in 3D space of the particle.
+			\(x^0 = t\) will represent the time of the particle as recorded from a stationary observer. \(x^i\), for i running 1 through 3, will represent the coordinate in 3D space of the particle.
 			\(x^1\) will represent the x coordinate, \(x^2 = y\), and \(x^3 = z\).<br>
 			<br>
-			From a stationary observer a light particle appears to travel through time.  Let \(\tau\) represent the observer's time.
-			The change in the light particle's position (in space and time) with respect to the change in the observer's time (the velocity in the observer's rest frame) can be represented as \({d \over {d\tau}} x^\mu\), or \({\dot x}^\mu\) for short.
+			Let \(\tau\) represent the particle's local time.
+			The change in the light particle's position (in space and time) relative to the observer with respect to the change in the particle's local time can be represented as \({d \over {d\tau}} x^\mu\), or \({\dot x}^\mu\) for short.
+			This is the velocity in the observer's rest frame. 
 			This appearance of velocity is only present to the observer, of course.
 			To the particle of light in its own rest frame, it is existing in all locations from its origin to its destination simultaneously.
 			For more on that check out the page on <a href='/time-dilation'>time dilation</a>.<br>
@@ -135,7 +136,7 @@ _gaq.push(['_trackPageview']);
 			The metric itself is based on the particle position \(x^\mu\).
 			In the end we get a formula for computing \({\ddot x}^\mu\) based on the \(x^\mu\) and \({\dot x}^\mu\).<br>
 			<br>
-			<h3>Implementation</h3>
+			<h3>Tracing Rays</h3>
 			Once we have these relations we can approximate them by simulating the position and velocity of light particles at arbitrary samples on the screen. 
 			The positions and velocities are updated using your favorite numeric integration method with the following equations:
 \( {d \over {d\tau}} \left[ \matrix { x^\mu \\ {\dot x}^\mu } \right]
